# poly-kalshi-sports-bot

./: .gitignore  MIGRATION_TO_RUST.md  README.md  build_linux.sh  build_windows.sh  debug_poly_order.py  polytaoli.log.2026-01-14  start_rust_stack.sh
.github/: copilot-instructions.md
deploy/: README.txt  config.example.toml  config.toml.sample  start.sh
poly-order-service/: main.py  requirements.txt  test_service.py
python-backend/: .gitignore  USAGE.txt  (+26 more)
rust-backend/: .gitignore  CHANGELOG_LOGGING.md  Cargo.toml  LOGGING.md  POLYMARKET_ORDERBOOK.md  README.md  config.example.toml  test_logging.sh
rust-backend/src/: lib.rs  main.rs  utils.rs
rust-backend/src/api/: mod.rs  routes.rs  static_files.rs  websocket.rs
rust-backend/src/api/routes/: accounts.rs  auto_trade.rs  health.rs  history.rs  markets.rs  mod.rs  orders.rs  settings.rs  stats.rs
rust-backend/src/clients/: kalshi.rs  mod.rs  polymarket.rs
rust-backend/src/clob/: client.rs  config.rs  headers.rs  mod.rs  order_builder.rs  signer.rs  types.rs
rust-backend/src/clob/signing/: eip712.rs  hmac.rs  mod.rs
rust-backend/src/config/: mod.rs
rust-backend/src/core/: calculator.rs  matcher.rs  mod.rs  nba_teams.rs
rust-backend/src/models/: mod.rs
rust-backend/src/services/: arbitrage.rs  metrics.rs  mod.rs  storage.rs  telegram.rs  websocket_manager.rs
rust-backend/src/services/storage/: auto_trade_repo.rs  excluded_markets_repo.rs  mod.rs  settings_repo.rs  tracking_repo.rs
rust-backend/src/services/websocket_manager/: auto_trade.rs  market_lifecycle.rs  mod.rs  opportunity_tracker.rs
(+60 files in other folders)
