[package]
name = "polytaoli"
version = "0.1.0"
edition = "2021"
description = "Prediction market arbitrage scanner"
authors = ["meloner"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Ethereum / Crypto
alloy = { version = "0.5", features = ["full", "signer-local"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"

# RSA signing (Kalshi)
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6"
url = "2"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
